# FinanceTracker

./: README.md  pyproject.toml  requirements_dev.txt
.github/: reviewer.yml
.github/scripts/: deepseek_review.py
.github/workflows/: reviewer.yml  ruff.yml
src/finance_track/: __init__.py  _cli.py  _version.py  boke_visualizer.py  bokeh_app.py  bokeh_plots.py  bokeh_visualizer.py  cli_ui.py  database.py  minimal_ui.py
