[project]
name = "finance-tracker"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jim.gomez.dnn@gmail.com" },
]
description = "Simple finance tracker"
dependencies = [
#    "bokeh"
]
requires-python = ">=3.9"
license = { text = "MIT license" }
dynamic = ["readme", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "http://github/USERNAME/REPO.git"
#Documentation = "https://readthedocs.org"

# [project.scripts]
# cli-command = "pkg_name.module:function"

[project.optional-dependencies]
dev = [
    "ruff",
#    "pytest",
#    "mkdocs-material"
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "finance_track._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]
